--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ryan-liu/create-app",
   "version": "1.0.0",
-  "main": "index.cjs",
+  "main": "dist/index.cjs",
   "license": "MIT",
   "type": "module",
   "bin": {
@@ -9,7 +9,7 @@
   },
   "files": [
     "dist",
-    "template-*"
+    "template"
   ],
   "scripts": {
     "dev": "yarn build --watch",
