--- a/template/template-react-18/package.json
+++ b/template/template-react-18/package.json
@@ -44,12 +44,8 @@
   "devDependencies": {
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
-    "stylelint": "^13.6.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^25.0.0",
-    "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.2.0"
+    "stylelint": "^14.5.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0"
   }
 }
