--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "bugs": {
     "url": "https://github.com/LuckyRyan-web/create-app/issues"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
   "devDependencies": {
     "@types/node": "^17.0.23",
     "tsup": "^5.12.4",
