修改 react-18 的模板，添加了 eslint 校验

--- a/template/template-react-18/.dtpl/tsconfig.json
+++ b/template/template-react-18/.dtpl/tsconfig.json
@@ -2,7 +2,9 @@
     "compilerOptions": {
         "target": "ES2015",
         "module": "CommonJS",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+		"allowSyntheticDefaultImports": true
     },
     "include": ["dtpl.ts"]
 }
