--- a/template/template-react-18/package.json
+++ b/template/template-react-18/package.json
@@ -7,10 +7,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^18.0.0",
     "antd": "^4.19.5",
     "classnames": "^2.3.1",
     "craco-alias": "^3.0.1",
@@ -27,7 +23,8 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "dev:dtpl": "tsc -P .dtpl/tsconfig.json -w"
+    "dev:dtpl": "tsc -P .dtpl/tsconfig.json -w",
+    "lint": "lint-staged"
   },
   "browserslist": {
     "production": [
@@ -42,9 +39,33 @@
     ]
   },
   "devDependencies": {
+    "@ryan-liu/eslint-config-react-app": "^0.1.3",
     "@ryan-liu/stylelint-config": "^1.0.4",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.38",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
+    "dot-template-types": "^0.3.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.3",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
     "stylelint": "^14.5.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,js,tsx,vue}": [
+      "eslint --fix --quiet"
+    ],
+    "src/**/*.json": [
+      "prettier --write"
+    ],
+    "*.{scss,less}": [
+      "stylelint --fix"
+    ]
   }
 }
