--- a/template/template-react-17/package.json
+++ b/template/template-react-17/package.json
@@ -1,52 +1,49 @@
 {
-  "name": "react-example",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "dev:dtpl": "tsc -P .dtpl/tsconfig.json -w"
-  },
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "@vitejs/plugin-react": "^1.0.7",
-    "dot-template-types": "^0.3.0",
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.3",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.5",
-    "prettier": "^2.5.1",
-    "sass": "^1.49.9",
-    "typescript": "^4.1.2",
-    "vite": "^2.8.0"
-  },
-  "husky": {
-    "hooks": {
-        "pre-commit": "lint-staged"
+    "name": "react-example",
+    "version": "1.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "dev:dtpl": "tsc -P .dtpl/tsconfig.json -w"
+    },
+    "dependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.2"
+    },
+    "devDependencies": {
+        "@ryan-liu/eslint-config-react-app": "^0.1.3",
+        "@ryan-liu/stylelint-config": "^1.0.6",
+        "@types/node": "^17.0.21",
+        "@types/react": "^17.0.33",
+        "@types/react-dom": "^17.0.10",
+        "@types/react-router-dom": "^5.3.3",
+        "@vitejs/plugin-react": "^1.0.7",
+        "dot-template-types": "^0.3.0",
+        "eslint": "^8.11.0",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.3.5",
+        "prettier": "^2.5.1",
+        "sass": "^1.49.9",
+        "stylelint": "^14.8.5",
+        "typescript": "^4.1.2",
+        "vite": "^2.8.0"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "src/**/*.{ts,js,tsx,vue}": [
+            "eslint --fix --quiet"
+        ],
+        "src/**/*.json": [
+            "prettier --write"
+        ],
+        "*.{scss,less}": [
+            "stylelint --fix"
+        ]
     }
-},
-"lint-staged": {
-    "*.{ts,js,tsx,vue}": [
-        "eslint --fix --quiet"
-    ],
-    "*.json": [
-        "prettier --write"
-    ],
-    "*.{scss,less}": [
-        "stylelint --fix"
-    ]
-}
 }
