--- a/template/template-react-17/package.json
+++ b/template/template-react-17/package.json
@@ -5,7 +5,8 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "dev:dtpl": "tsc -P .dtpl/tsconfig.json -w"
+        "dev:dtpl": "tsc -P .dtpl/tsconfig.json -w",
+        "lint": "lint-staged"
     },
     "dependencies": {
         "react": "^17.0.2",
