--- a/template/template-react-18-vite/package.json
+++ b/template/template-react-18-vite/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "main-page",
-  "description": "个人网站主页",
+  "name": "react-18-vite3",
   "private": true,
   "version": "0.0.0",
   "scripts": {
