--- a/template/template-vue/.prettierrc
+++ b/template/template-vue/.prettierrc
@@ -2,12 +2,10 @@
     "singleQuote": true,
     "semi": false,
     "tabWidth": 4,
-    "overrides": [
-        {
-            "files": ["src/**/*.tsx", "src/**/*.ts"],
-            "options": {
-                "parser": "typescript"
-            }
+    "overrides": [{
+        "files": ["src/**/*.tsx", "src/**/*.ts"],
+        "options": {
+            "parser": "typescript"
         }
-    ]
+    }]
 }
