--- a/template/template-rollup/package.json
+++ b/template/template-rollup/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "a simple rollup template",
   "author": "ryan-liu",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
@@ -16,6 +17,7 @@
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1",
     "rollup": "^2.57.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "tslib": "^2.3.1",
