fix access public

--- a/template/template-rollup/package.json
+++ b/template/template-rollup/package.json
@@ -41,5 +41,9 @@
     "*.json": [
       "prettier --write"
     ]
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
   }
 }
